# talent-plan-rust

./: README.md
rust/building-blocks/bb-1/: bb1.md
rust/building-blocks/bb-1/clap-demo/: Cargo.toml
rust/building-blocks/bb-1/grrs/: Cargo.toml
rust/building-blocks/bb-1/grrs/src/: main.rs
rust/building-blocks/bb-2/: README.md
rust/building-blocks/bb-2/serde-ex/: Cargo.toml  move_to_json.txt
rust/building-blocks/bb-3/: README.md
rust/building-blocks/bb-4/: README.md
rust/kv/: Cargo.toml  abi.proto
rust/kv/examples/: client.rs  dummy_server.rs  server.rs  server_with_codec.rs  server_with_sled.rs
rust/kv/fixtures/: ca.cert  ca.key  client.cert  client.key  server.cert  server.key
rust/kv/src/: error.rs  lib.rs
rust/kv/src/network/: frame.rs  mod.rs  stream.rs  tls.rs
rust/kv/src/pb/: abi.rs  mod.rs
rust/kv/src/service/: command_service.rs  mod.rs
rust/kv/src/storage/: memory.rs  mod.rs  sleddb.rs
rust/projects/project-1/: Cargo.toml  README.md
rust/projects/project-1/src/: kv.rs
rust/projects/project-2/: Cargo.toml  README.md
rust/projects/project-2/src/: error.rs  kv.rs  lib.rs
rust/projects/project-3/: Cargo.toml  README.md  db  kvs.drawio
rust/projects/project-3/benches/: engine_bench.rs
rust/projects/project-3/src/: client.rs  error.rs  lib.rs  server.rs
rust/projects/project-3/src/engines/: kvs.rs  mod.rs  sled.rs
rust/projects/project-4/: Cargo.toml  README.md
rust/projects/project-4/src/: client.rs  common.rs  lib.rs  server.rs
rust/projects/project-4/src/engines/: kvs.rs  mod.rs  sled.rs
rust/projects/project-4/src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
