[package]
name = "kvs"
version = "0.1.0"
authors = ["wenjin <wenjinsmail@163.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#clap = { version = "3.2.10", features = ["derive"] }
clap = "2.32.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

