[package]
name = "kvs"
version = "0.1.0"
authors = ["wen jin<wenjinsmail@163.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
clap = { version = "3.2.14", features = ["derive"] }

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"