[package]
name = "kvs"
version = "0.1.0"
authors = ["wen jin<wenjinsmail@163.com>"]
description = "A single-threaded, persistent key/value store server and client with synchronous networking over a custom protocol."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"]}
structopt = "0.3.26"
failure = "0.1.8"
sled = "0.34.7"
serde = { version = "1.0.141", features = ["derive"]}
serde_json = "1.0.82"
log = "0.4.17"
env_logger = "0.9.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "engine_bench"
harness = false