[package]
name = "kvs"
version = "0.1.0"
authors = ["wen jin<wenjinsmail@163.com>"]
description = "A multi-threaded, persistent key/value store server and client with synchronous networking over a custom protocol."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"]}
structopt = "0.3.26"
failure = "0.1.8"
sled = "0.34.7"
serde = { version = "1.0.141", features = ["derive"]}
serde_json = "1.0.82"
log = "0.4.17"
env_logger = "0.9.0"
crossbeam-skiplist = { git = "https://github.com/crossbeam-rs/crossbeam", branch = "master" }
rayon = "1.5.3"
crossbeam = "0.8.2"
num_cpus = "1.10.0"

[dev-dependencies]
assert_cmd = "2.0.4"
criterion = "0.3.6"
crossbeam-utils = "0.8.11"
predicates = "2.1.1"
rand = "0.8.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"
